  * New feature [#5738] : Do not disconnect when VoIP or an IM Account (Google Talk, Skype) is used
  * New feature [#5310] : Each connection (gprs and wlan) has its own settings
  * New feature [#5221] : Control Panel Applet - Reporter : pillar

  * Fix [#5733] : Bluetooth is disconnected when the FM Radio is used - Reporter DaSilva

 -- Aymeric Brisse <aymeric.brisse@gmail.com>  Thu, 13 May 2010 22:12:31 +0200

autodisconnect (0.3.1-2) unstable; urgency=low

  * Update Description

 -- Aymeric Brisse <aymeric.brisse@gmail.com>  Wed,  5 May 2010 19:20:12 +0200

autodisconnect (0.3.1) unstable; urgency=low

  * Enhancement : Bluetooth settings changes are now taken in account at the next check

 -- Aymeric Brisse <aymeric.brisse@gmail.com>  Mon,  3 May 2010 14:49:18 +0200

autodisconnect (0.3) unstable; urgency=low

  * New feature [#5260] : Add option "Disable when plugged in" - Reporter : phedders
  * New feature [#5662] : Add option "Disable Bluetooth if no device is connected" - Reporter : DaSilva
  * New feature [#5233] : Add option "Do not disconnect if ssh connections are active" - Reporter : fred123
  * New feature [#5659] : Limit can now be set in B/KB/MB

  * Fix : New Installer (AutoDisconnect didn't work  anymore when reinstalled)

  * Enhancement : UI has been reorganized an now uses tabs

 -- Aymeric Brisse <aymeric.brisse@gmail.com>  Sat,  1 May 2010 22:43:04 +0200

autodisconnect (0.2.2) unstable; urgency=low

  * Fix : Max Idle Traffic was a value per second instead of minute
  * Minor Fix : UI Interface - Spelling Traffic instead of Trafic (french)

 -- Aymeric Brisse <aymeric.brisse@gmail.com>  Mon, 22 Feb 2010 18:13:55 +0100

autodisconnect (0.2.1) unstable; urgency=low

  * Fix [#5236] : Disconnection always happens when interface is up since more than 10MB

  * Minor enhancement : display notification when settings are saved.

 -- Aymeric Brisse <aymeric.brisse@gmail.com>  Mon, 22 Feb 2010 16:04:16 +0100
