@@ -2,7 +2,7 @@ Source: autodisconnect
 Section: user/network
 Priority: extra
 Maintainer: Aymeric Brisse <aymeric.brisse@gmail.com>
-Build-Depends: debhelper (>= 5), libqt4-maemo5-dev, libgconf2-dev, libnotify-dev
+Build-Depends: debhelper (>= 5), libgtk2.0-dev, libqt4-maemo5-dev, libgconf2-dev, libosso-dev
 Standards-Version: 3.7.2
 Homepage: http://github.com/abrisse/AutoDisconnect
 
