@@ -38,11 +38,14 @@ case "$1" in
         else
             gconftool-2 --unset /apps/autodisconnect/param_min_bytes
         fi
+
         [[ -z "`gconftool-2 --get /apps/autodisconnect/param_gprs_traffic 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_gprs_traffic --type int "$val"
         [[ -z "`gconftool-2 --get /apps/autodisconnect/param_wlan_traffic 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_wlan_traffic --type int "$val"
         
         [[ -z "`gconftool-2 --get /apps/autodisconnect/param_exception_ssh 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_exception_ssh --type bool true
         [[ -z "`gconftool-2 --get /apps/autodisconnect/param_exception_openvpn 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_exception_openvpn --type bool true
+        [[ -z "`gconftool-2 --get /apps/autodisconnect/param_exception_voip 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_exception_voip --type bool true
+        [[ -z "`gconftool-2 --get /apps/autodisconnect/param_exception_im_accounts 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_exception_im_accounts --type bool true
         [[ -z "`gconftool-2 --get /apps/autodisconnect/param_connection_wlan 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_connection_wlan --type bool true
         [[ -z "`gconftool-2 --get /apps/autodisconnect/param_connection_gprs 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_connection_gprs --type bool true
         [[ -z "`gconftool-2 --get /apps/autodisconnect/param_use_2g 2>/dev/null`" ]] && gconftool-2 --set /apps/autodisconnect/param_use_2g --type bool false
