@@ -225,7 +225,7 @@
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
-      <string>Network</string>
+      <string>Network - General</string>
      </attribute>
      <widget class="QLabel" name="label_3">
       <property name="geometry">
@@ -367,9 +367,9 @@
      <widget class="QLabel" name="label_17">
       <property name="geometry">
        <rect>
-        <x>450</x>
+        <x>440</x>
         <y>10</y>
-        <width>191</width>
+        <width>331</width>
         <height>60</height>
        </rect>
       </property>
@@ -386,7 +386,7 @@
        </font>
       </property>
       <property name="text">
-       <string>- Network Mode:</string>
+       <string>- Network Mode (beta) :</string>
       </property>
       <property name="textFormat">
        <enum>Qt::AutoText</enum>
@@ -398,9 +398,9 @@
      <widget class="QCheckBox" name="chkUse2G">
       <property name="geometry">
        <rect>
-        <x>450</x>
+        <x>440</x>
         <y>70</y>
-        <width>321</width>
+        <width>351</width>
         <height>60</height>
        </rect>
       </property>
@@ -423,7 +423,7 @@
        </font>
       </property>
       <property name="text">
-       <string>Use 2G when 3G unused</string>
+       <string>Use 2G when not connected</string>
       </property>
       <property name="checked">
        <bool>false</bool>
@@ -1002,7 +1002,7 @@
     </widget>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
-      <string>Bluetooth - Settings</string>
+      <string>Bluetooth</string>
      </attribute>
      <widget class="QLabel" name="label_15">
       <property name="geometry">
